asm_examples/test/errors/wp/comma.asm
/** with a semicolom ; the parser quits without errors
is it in the bugzilla?
*/

asm comma
	
import ../../../STDL/StandardLibrary
	
signature:

	abstract domain Orders;
		                 	